src/test/ui/type-alias-impl-trait/issue-60371.stderr
error[E0658]: `impl Trait` in type aliases is unstable
  --> $DIR/issue-60371.rs:8:5
   |
LL |     type Item = impl Bug;
   |     ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/63063
   = help: add `#![feature(type_alias_impl_trait)]` to the crate attributes to enable

error[E0277]: the trait bound `(): Bug` is not satisfied
  --> $DIR/issue-60371.rs:8:5
   |
LL |     type Item = impl Bug;
   |     ^^^^^^^^^^^^^^^^^^^^^ the trait `Bug` is not implemented for `()`
   |
   = help: the following implementations were found:
             <&() as Bug>
   = note: the return type of a function must have a statically known size

error: could not find defining uses
  --> $DIR/issue-60371.rs:8:5
   |
LL |     type Item = impl Bug;
   |     ^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0277, E0658.
For more information about an error, try `rustc --explain E0277`.
